compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__bit_array_segment_unit_unit.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 105
expression: "let x = <<1:unit(2)-unit(5)>> x"
snapshot_kind: text
---
----- SOURCE CODE
let x = <<1:unit(2)-unit(5)>> x

----- ERROR
error: Invalid bit array segment
  ┌─ /src/one/two.gleam:1:21
  │
1 │ let x = <<1:unit(2)-unit(5)>> x
  │                     ^^^^^^^ This is an extra unit specifier

Hint: A BitArray segment can have at most 1 unit.
See: https://tour.gleam.run/data-types/bit-arrays/
